@@ -19,6 +19,12 @@ Version 3.1.3 - in development
   not themselves defined as `staticmethods`. When called using a `ParserElement` instance,
   this resulted  in a `TypeError` exception. Reported by eylenburg (#548).
 
+- To address a compatibility issue in RDFLib, added a property setter for the
+  `ParserElement.name` property, to call ParserElement.set_name.
+
+- Modified `ParserElement.set_name()` to accept a None value, to clear the defined
+  name and corresponding error message for a `ParserElement`.
+
 - Updated railroad diagram generation for `ZeroOrMore` and `OneOrMore` expressions with
   `stop_on` expressions, while investigating #558, reported by user Gu_f.
 
